<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MYQQ</string>
    <string name="slide_block">滑动框架</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">放大镜</string>
    <string name="trend">动态</string>
    <string name="more">更多</string>
    <string name="hidden_text">搜索电影/音乐/商品…</string>
    <string name="tribal">兴趣部落</string>
    <string name="about">附近</string>
    <string name="trends">好友动态</string>
    <string name="news">消息</string>
    <string name="contact">联系人</string>

    <string-array name="Weekday">
        <item>星期一</item>
        <item>星期二</item>
        <item>星期三</item>
        <item>星期四</item>
        <item>星期五</item>
        <item>星期六</item>
        <item>星期日</item>
    </string-array>

</resources>