<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/relativeLayout1"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:background="@android:color/white"
        >

        <RelativeLayout
            android:id="@+id/head3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/editText1"
            android:layout_marginTop="17dp"
            android:orientation="horizontal" >

            <ImageView
                android:layout_width="34dp"
                android:layout_height="34dp"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:layout_marginRight="37dp"
                android:contentDescription="@+id/iei"
                android:src="@drawable/ic_iei" />

            <ImageView
                android:layout_width="34sp"
                android:layout_height="34sp"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:contentDescription="@+id/ic_igq"
                android:src="@drawable/ic_igq" />

            <ImageView
                android:layout_width="34dp"
                android:layout_height="34dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_marginLeft="37dp"
                android:contentDescription="@+id/ic_igs"
                android:src="@drawable/ic_igs" />
        </RelativeLayout>

        <EditText
            android:id="@+id/editText1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_marginLeft="7sp"
            android:layout_marginRight="7sp"
            android:layout_marginTop="7sp"
            android:background="@drawable/shape"
            android:gravity="center"
            android:singleLine="true"
            android:hint="@string/hidden_text" >

            <requestFocus />
        </EditText>

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/head3"
            android:layout_marginRight="26dp"
            android:text="@string/tribal" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/textView1"
            android:layout_alignBottom="@+id/textView1"
            android:layout_centerHorizontal="true"
            android:text="@string/trend" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/textView2"
            android:layout_alignBottom="@+id/textView2"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="28dp"
            android:text="@string/tribal" />

        <ImageView
            android:id="@+id/man1"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_above="@+id/head3"
            android:layout_alignRight="@+id/textView3"
            android:contentDescription="@string/hello_world"
            android:src="@drawable/ic_man" />

    </RelativeLayout>

</LinearLayout>