<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#FFFFFF" >

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="38dp"
        android:orientation="vertical" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="#232324"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_centerInParent="true"
                android:layout_centerVertical="true"
                android:gravity="center"
                android:text="@string/trend"
                android:textColor="#D7C286"
                android:textSize="16sp" />

            <ImageView
                android:layout_width="34dp"
                android:layout_height="34dp"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="14dp"
                android:contentDescription="@+id/ic_oid"
                android:src="@drawable/ic_oid" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:layout_marginRight="14dp"
                android:gravity="center"
                android:text="@string/more"
                android:textColor="#D7C286"
                android:textSize="16sp" />

        </RelativeLayout>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/linearLayout"
        android:background="#ECEFEF" >

        <ListView
            android:id="@+id/id_listview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:divider="#B2B2B2"
            android:scrollbars="none" >
        </ListView>

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="match_parent"
        android:layout_height="43dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:orientation="horizontal" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#D7C286"
            android:orientation="horizontal" >

            <ImageView
                android:id="@+id/jpg_link"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:contentDescription="@string/contact"
                android:src="@drawable/skin_tab_icon_conversation_normal" />

            <ImageView
                android:id="@+id/tv_trend"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignTop="@+id/jpg_link"
                android:layout_marginRight="48dp"
                android:contentDescription="@string/trend"
                android:src="@drawable/skin_tab_icon_plugin_selected" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignTop="@+id/jpg_link"
                android:layout_marginLeft="48dp"
                android:contentDescription="@string/news"
                android:src="@drawable/skin_tab_icon_contact_normal" />
        </RelativeLayout>
    </LinearLayout>
</RelativeLayout>